# offleaf

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-installers.yml  ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: install-essential-packages.bat  install-essential-packages.sh
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/BibTeX/: BibTeXManager.tsx
src/components/Editor/: MathPreview.tsx  MonacoEditor.tsx
src/components/Log/: CompilationLog.tsx
src/components/PackageManager/: PackageManager.tsx
src/components/Preview/: PDFPreview.tsx
src/components/Search/: SearchReplace.tsx
src/components/Setup/: FirstRunSetup.tsx
src/components/Sidebar/: FileTree.tsx
src/components/SpellCheck/: SpellCheckPanel.tsx
src/components/Templates/: TemplateSelector.tsx
src/components/Toast/: ToastContainer.tsx
src/components/Toolbar/: Toolbar.tsx
src/lib/latex/: compiler.ts  completions.ts  swiftlatex.ts  templates.ts
src/lib/spellcheck/: spellchecker.ts
src/lib/storage/: indexeddb.ts
src/lib/system/: diagnostics.ts
src/stores/: editorStore.ts  fileStore.ts
src/types/: index.ts
