[package]
name = "offleaf"
version = "1.0.0"
description = "Offline LaTeX Editor with XeLaTeX support"
authors = ["OffLeaf Team"]
edition = "2021"

[lib]
name = "offleaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["process", "fs"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
regex = "1"
lazy_static = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
